# learn_c-

./: .gitignore  README
day01/: CMakeLists.txt  main.cpp
day03/: CMakeLists.txt  main.cpp
day04/: CMakeLists.txt  main.cpp
day05/: CMakeLists.txt  main.cpp
day06/: CMakeLists.txt  main.cpp
day07/: CMakeLists.txt  main.cpp  matrix.txt  test.txt
day08/: CMakeLists.txt  main.cpp
day09/: CMakeLists.txt  main.cpp
day10/: CMakeLists.txt  config.h  config.h.in  main.cpp
day10/test/: CMakeLists.txt  test.cpp  test.h
day10/test2/: CMakeLists.txt  test2.cpp  test2.h
